Add storage support and improve feed ranking